[gd_scene load_steps=5 format=3 uid="uid://ctm0frkpmkh7w"]

[ext_resource type="Script" uid="uid://cj1shq6myl0xo" path="res://scripts/ui/MainMenu.gd" id="1_qi05h"]
[ext_resource type="PackedScene" uid="uid://bvx8k3n2yw1fs" path="res://scenes/world/ParallaxSpaceBackground.tscn" id="2_parallax"]
[ext_resource type="Theme" uid="uid://bh3pao1yls74n" path="res://resources/themes/main_theme.tres" id="3_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_menu_panel"]
bg_color = Color(0.02, 0.059, 0.078, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.898, 1, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.7)
shadow_size = 15

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1_qi05h")

[node name="ParallaxSpaceBackground" parent="." instance=ExtResource("2_parallax")]
auto_scroll = true
auto_scroll_speed = Vector2(3, 2)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_menu_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Spacer1" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898, 1, 1)
theme_override_font_sizes/font_size = 42
text = "EXPANSION"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.612, 0.153, 0.69, 1)
theme_override_font_sizes/font_size = 18
text = "RTS Demo"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StartButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "▶ PLAY"

[node name="LoadButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "⟳ LOAD GAME"

[node name="BlueprintButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "⚙ SHIP BUILDER"

[node name="SettingsButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "⚙ SETTINGS"

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "✕ QUIT"

[node name="Spacer3" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
